<resources>
    <string name="app_name">LoginPage</string>
    <string name="started_title">Hello you!</string>
    <string name="started_sub_title">
        Nice to meet you, come join our community!
        <br><b>Login</b> if you already have an account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="illustration_img">Illustration Image</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
        <font color="#FF000000"><b>Login</b> if you already have an account.</font>
    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>
    <string name="login_havent_account">
        I don\'t have an account <font color="FF000000"><b>Resgister</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#FF000000"><b>Register</b> to get started with the app.</font>
    </string>
    <string name="register_fullname">Your fullname</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_password">Your Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_have_account">
        I already have an account <font color="#FF000000"><b>Login</b></font>
    </string>
    <string name="home_title">Welcome</string>
    <string name="home_sub_title">Logout to go back</string>
    <string name="btn_logout">Logout</string>
</resources>